# baesjlort

./: .gitignore  README.md
camera_calibrations/: left_air.yaml  ost_air.txt  right_air.yaml
plotting_program/: filter_creator.py  main.py  signal_analasys.py  sys_id.py
plotting_program/data_files/: sensor_data.csv  training_data.csv  validation_data.csv
scripts/plotting_program/: CLAHEORB_tester.py  YOLO_model_test.py  aruco_detection_test.py  distance_estimate_test.py  error_plotter.py  filter_creator.py  image_compression methods.py  main.py  sys_id.py
scripts/plotting_program/data_files/: error_data.csv  sensor_data.csv  validation_data.csv
sensor_read_and_interprat/: CMakeLists.txt
sensor_read_and_interprat/include/: IMU_class.hpp  sensor_handler.hpp  sensor_subscriber.hpp  structs.hpp
sensor_read_and_interprat/install/: local_setup.sh  setup.sh
sensor_read_and_interprat/log/: latest_build
src/ROV_controller/: CMakeLists.txt  package.xml
src/ROV_controller/include/ROV_controller/: PID_controller.hpp  ROV_controller.hpp
src/ROV_controller/src/: main.cpp
src/controller_input/: CMakeLists.txt  package.xml
src/controller_input/src/: controller_input.cpp  main.cpp
src/controller_msgs/: CMakeLists.txt  package.xml
src/controller_msgs/msg/: ControllerState.msg
src/h264_receiver/: CMakeLists.txt  package.xml
src/h264_receiver/src/: h264_receiver.cpp  main.cpp
src/h264_streamer/src/: h264_streamer.cpp
src/image_compressor/: package.xml  setup.py
src/image_compressor/image_compressor/: compression_node.py  decompression_node.py
src/log_to_file/: CMakeLists.txt  package.xml
src/log_to_file/include/log_to_file/: log_to_file.hpp
src/log_to_file/include/log_to_file/controller/: controller_logger.hpp
src/log_to_file/include/log_to_file/image/: image_logger.hpp
src/log_to_file/include/log_to_file/imu/: imu_logger.hpp
src/log_to_file/include/log_to_file/pressure/: pressure_logger.hpp
src/log_to_file/include/log_to_file/video/: video_logger.hpp
src/log_to_file/launch/: controller_logger.launch.py  image_launcher_launcher.py  image_logger.launch.py  imu_logger.launch.py  log.launch.py  pressure_logger.launch.py  video_logger.launch.py
src/log_to_file/src/: log_to_file.cpp  main.cpp
src/log_to_file/src/controller/: controller_logger.cpp  main.cpp
src/log_to_file/src/image/: image_logger.cpp  main.cpp
src/log_to_file/src/imu/: imu_logger.cpp  main.cpp
src/log_to_file/src/pressure/: main.cpp  pressure_logger.cpp
src/log_to_file/src/video/: main.cpp  video_logger.cpp
src/ros2_orb_slam3/: CMakeLists.txt  package.xml
src/ros2_orb_slam3/config/: stereo_gbr_sim.yaml
src/ros2_orb_slam3/src/: mono_example.cpp
src/rov_bringup/: CMakeLists.txt  package.xml
src/rov_bringup/launch/: all.launch.py  loggers.launch.py  receivers.launch.py  rov.launch.py
src/sensor_read_and_interpret/: CMakeLists.txt  package.xml
src/sensor_read_and_interpret/include/: IMU_class.hpp  VIMU_filter.hpp  filter_coeffs_lowpass.hpp  image_display_and_handle.hpp  klamann_shit.hpp  sensor_handler.hpp  sensor_subscriber.hpp  structs.hpp
src/sensor_read_and_interpret/launch/: ROV_launch.py
src/sensor_read_and_interpret/src/: main.cpp
src/stonefish_simulator/: .gitmodules
src/sys_id/: CMakeLists.txt  package.xml
src/sys_id/data_files/: thrust_commands_20260119_134408.csv
src/sys_id/include/: sys_id_commands.hpp
src/sys_id/sensor_read_and_interprat/: CMakeLists.txt
src/sys_id/src/: main.cpp
src/yolo_tac_objects_detection/: package.xml  setup.cfg  setup.py
src/yolo_tac_objects_detection/yolo_tac_objects_detection/: yolo_node.py
stonefish_simulator/: .gitignore  README.md
stonefish_simulator/src/stonefish_sim/: CMakeLists.txt  package.xml
stonefish_simulator/src/stonefish_sim/drones/: gbr.scn
stonefish_simulator/src/stonefish_sim/scenarios/: gbr_DYNSYS2025.scn  gbr_docking.scn  gbr_keyboard_demo.scn
stonefish_simulator/src/stonefish_sim/scripts/: gbr_DYNSYS2025.sh
sys_id/: CMakeLists.txt  package.xml
sys_id/include/: sys_id_commands.hpp
sys_id/src/: main.cpp
training_data_yolo_model/trainingYOLOrov1/: README.roboflow.txt
training_data_yolo_model/trainingYOLOrov1/test/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov1/train/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov1/valid/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov2/: README.roboflow.txt
training_data_yolo_model/trainingYOLOrov2/valid/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov3/: README.roboflow.txt
training_data_yolo_model/trainingYOLOrov3/test/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov3/train/: _annotations.coco.json
training_data_yolo_model/trainingYOLOrov3/valid/: _annotations.coco.json
(+43 files in other folders)
