<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stonefish_sim</name>
  <version>0.0.0</version>
  <description>Stonefish Maritime Simulator</description>
  <maintainer email="orjan.t.lynnes@ntnu.no"></maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>stonefish_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
